--- a/style.css
+++ b/style.css
@@ -86,10 +86,10 @@ transition-duration: 1s;
     transition-duration: 1s;
 }
 .tran12:hover{
-    transform:skew(20deg, -40deg);
-    /* transform: translate(50px, 50px) skew(20deg, 20deg)scale(1.5,0) skew(20deg, 30deg); */
+    /* ....... */
+    transform-origin: bottom left;
+    transform:skew(0deg,50deg) scale(2);
     transition-duration: 1s;
-    transform-origin: 12px;
 }
 .tran13:hover{
     transform: perspective(80px) rotateX(60deg);
@@ -102,51 +102,63 @@ transition-duration: 1s;
 .tran15:hover{
     transform-origin: top right;
     transform:rotate(40deg);
-    transition-duration: 1s;
+    transition-duration: .6s;
 }
 .tran16:hover{
     transform-origin: bottom left;
     transform:rotate(40deg);
-    transition-duration: 1s;
+    transition-duration: .6s;
 }
 .tran17:hover{
     transform-origin: bottom;
-    transform: perspective(100px) rotatey(60deg);
-    transition-duration: 1s;
+    transform: perspective(110px) rotateX(50deg);
+    transition-duration: 1.5s;
 }
 .tran18:hover{
-    transform: perspective(70px) rotatey(40deg);
-    transition-duration: 1s;
+    transform-origin: top;
+    transform: perspective(170px) rotatex(60deg);
+    transition-duration: 1.5s;
 }
 .tran19:hover{
-    transform: perspective(70px) rotatey(40deg);
-    transition-duration: 1s;
+    transform-origin: left;
+    transform: perspective(110px) rotatey(50deg);
+    transition-duration: 1.5s;
 }
 .tran20:hover{
-    transform: perspective(70px) rotatey(40deg);
-    transition-duration: 1s;
+    transform-origin: right;
+    transform: perspective(170px) rotatey(60deg);
+    transition-duration: 1.5s;
 }
 .tran21:hover{
     transform-origin: TOP right;
-    /* transform: translate(20PX,20PX); */
-    transform: scale(2, 2);
-    transition-duration: 1s;
+    transform: scale(2);
+    transition-duration:0.6s;
 }
 .tran22:hover{
     transform-origin: bottom left;
-    /* transform: translate(20PX,20PX); */
-    transform: scale(2, 2);
-    transition-duration: 1s;
+    transform: scale(2);
+    transition-duration: .6s;
 }
 .tran23:hover{
     transform-origin: right;
-    /* transform: translate(20PX,20PX); */
     transform: scaleX(1.5);
-    transition-duration: 1s;
+    transition-duration: .6s;
 }
 .tran24:hover{
     transform-origin: left;
-    /* transform: translate(20PX,20PX); */
     transform: scaleX(1.5);
-    transition-duration: 1s;
+    transition-duration: .6s;
+    transition-delay: .2s;
+}
+.tran25:hover{
+    transform-origin: top;
+    transform: scaley(1.5);
+    transition-duration: .6s;
+    transition-delay: .2s;
+}
+.tran26:hover{
+    transform-origin: bottom;
+    transform: scaley(1.5);
+    transition-duration: .6s;
+    transition-delay: .2s;
 }
